hhmmm. update official link and add dev note

--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
   }
 }
 &lt;/script&gt;
-&lt;script src="https://chat-widget.jovylle.com/embed.js"&gt;&lt;/script&gt;
+&lt;script src="https://chat-widget.uft1.com/embed.js"&gt;&lt;/script&gt;
 </code></pre>
 
   <h2>🧪 Live Demo</h2>
