yow update proper

--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,18 @@
   <pre><code>&lt;script type="application/json" id="chat-config"&gt;
 {
   "chatbot": {
+    "theme": "light",
+    "instructions": "You're a helpful assistant for this site."
+  }
+}
+&lt;/script&gt;
+&lt;script src="https://chat-widget.uft1.com/embed.js"&gt;&lt;/script&gt;
+</code></pre>
+
+  <p>Optional config with <code>siteID</code> and <code>position</code>:</p>
+  <pre><code>&lt;script type="application/json" id="chat-config"&gt;
+{
+  "chatbot": {
     "siteID": "your-site-id",
     "theme": "light",
     "position": "bottom-right",
@@ -92,7 +104,7 @@
     <li><strong>instructions</strong>: Prompt for your chatbot's behavior</li>
   </ul>
 
-  <p>📂 <a href="https://github.com/yourname/chat-widget" target="_blank">View on GitHub</a></p>
+  <p>📂 <a href="https://github.com/jovylle/chat-widget" target="_blank">View on GitHub</a></p>
 
 </body>
 
