--- a/public/index.html
+++ b/public/index.html
@@ -53,31 +53,15 @@
 
   <h2>🚀 How to Use</h2>
   <p>Paste this inside your HTML:</p>
-  <pre><code>&lt;script type="application/json" id="chat-config"&gt;
+  <pre><code>&lt;script type="application/json" id="chat-widget-config-001"&gt;
 {
   "chatbot": {
-    "theme": "light",
     "instructions": "You're a helpful assistant for this site."
   }
 }
 &lt;/script&gt;
 &lt;script src="https://chat-widget.uft1.com/embed.js"&gt;&lt;/script&gt;
 </code></pre>
-
-  <p>Optional config with <code>siteID</code> and <code>position</code>:</p>
-  <pre><code>&lt;script type="application/json" id="chat-config"&gt;
-{
-  "chatbot": {
-    "siteID": "your-site-id",
-    "theme": "light",
-    "position": "bottom-right",
-    "instructions": "You're a helpful assistant for this site."
-  }
-}
-&lt;/script&gt;
-&lt;script src="https://chat-widget.uft1.com/embed.js"&gt;&lt;/script&gt;
-</code></pre>
-
   <h2>🧪 Live Demo</h2>
   <p>This page is running the chatbot — click the chat bubble.</p>
   <div class="demo">
