--- a/public/test.html
+++ b/public/test.html
@@ -17,12 +17,11 @@
     - position: "bottom-right" (default), "bottom-left", "top-right", "top-left"
   -->
 
-  <script type="application/json" id="chat-config">
+  <script type="application/json" id="widget-config-001">
     {
-      "siteID": "your-site-id",
-      "theme": "dark",
-      "instructions": "You're a helpful assistant.",
-      "position": "bottom-right"
+      "chatbot": {
+        "instructions": "You're a helpful assistant for this site."
+      }
     }
   </script>
 
