--- a/public/widget.html
+++ b/public/widget.html
@@ -85,6 +85,8 @@
       cursor: pointer;
     }
   </style>
+  <!-- Cloudflare Web Analytics -->
+  <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "a2a244b1e0a8477f8ec16b64ab2064ca"}'></script><!-- End Cloudflare Web Analytics -->
 </head>
 
 <body>
