yow of course the index.html call its own embed

--- a/public/index.html
+++ b/public/index.html
@@ -148,7 +148,7 @@
   }
 }
   <\/script>
-  <script src="https://chat-widget.uft1.com/embed.js"><\/script>`;
+  <script src="/embed.js"><\/script>`;
       document.getElementById('embed-code').innerText = snippet;
     }
 
