--- a/public/index.html
+++ b/public/index.html
@@ -210,18 +210,9 @@
   box-shadow:0 4px 20px rgba(0,0,0,0.3);
   `;
       const iframe = document.createElement('iframe');
-      const thisScript = document.currentScript
-        || Array.from(document.getElementsByTagName('script'))
-          .find(s => s.src && s.src.match(/\/embed(?:\.min)?\.js(\?.*)?$/));
-
-      const scriptUrl = thisScript
-        ? new URL(thisScript.src, window.location.href)
-        : new URL('https://chat-widget.uft1.com/embed.js');
-
-      const basePath = scriptUrl.origin + scriptUrl.pathname.replace(/\/[^\/]+$/, '');
-
-      iframe.src = `${basePath}/widget.html?siteID=${encodeURIComponent(bot.siteID || 'demo')}&theme=${bot.theme || 'light'}`;
-
+      iframe.src = `/widget.html`
+        + `?siteID=${encodeURIComponent(bot.siteID || 'demo')}`
+        + `&theme=${bot.theme || 'light'}`;
       
       iframe.style = 'width:100%;height:100%;border:none;';
       wrap.appendChild(iframe);
